--- a/src/style.css
+++ b/src/style.css
@@ -3,79 +3,85 @@
   font-family: 'Baloo 2', cursive;
   text-align: center;
   color: black;
-   }
+  }
+
   header{
-   widht: 100%;
-   height: 170px;
-   background-color: black;
+  width: 100%;
+  height: 170px;
+  background-color: black;
   }
+
   #imgTelos{
-    display: block;
-    margin: auto;
+  display: block;
+  margin: auto;
   }
+
   .firstSlide{
-    text-align: center;
+  text-align: center;
+  border: 1px solid rgb(243, 144, 144);
   border-radius: 9px;
-      background-color: rgba(128, 0, 122, 0.308);
-      margin: 5%;
+  background-color: rgba(128, 0, 122, 0.308);
+  margin: 5%;
   }
+
   .botones {
-    background-color: rgba(130, 83, 112, 0.871);
-    border-radius: 9px;
-    box-size: center;
-    cursor: pointer;
-    padding:1%;
-    color: rgb(247, 241, 241);
-    margin: 4px 2px;
+  background-color: rgba(130, 83, 112, 0.871);
+  border-radius: 9px;
+  cursor: pointer;
+  padding:1%;
+  color: rgb(247, 241, 241);
+  margin: 4px 2px;
   }
+
   body{
-    background-color: rgb(228, 189, 189);
+  background-color: rgb(228, 189, 189);
   }
+
   footer{
-    color: grey;
-    opacity: 0.5;
-    background-color: black;
-    border: 1px solid rgb(243, 144, 144);
+  color: grey;
+  opacity: 0.5;
+  background-color: black;
+  border: 1px solid rgb(243, 144, 144);
   }
+
   .secondSlide{
-      text-align: center;
-  border-radius: 8px;
-      background-color: rgba(128, 0, 122, 0.308);
-      margin: 5%;
+  text-align: center;
+  border: 1px solid rgb(243, 144, 144);
+  border-radius: 9px;
+  background-color: rgba(128, 0, 122, 0.308);
+  margin: 5%;
   }
-  
-  
+
   #validado {
-    color:salmon
+  color:salmon
   }
-  
+
   footer {font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size:13px;
   text-align:right;
   }
-  
-  
-  
+
   #textoIngresaTarjeta {
-    font-size:150%;
+  font-size:150%;
   }
-  
+
   #enterCard {
   display:none;
   }
-  
+
   #forbiddenAccess {
-    display:none;
+  display:none;
   }
-  
+
   #about {
-    display:none;
+  display:none;
   }
-  
+
   #contactForm {
-    display:none;
+  display:none;
   }
   
   #finalScreen {
-    display:none;
+  display:none;
   }
+  
